<resources>
    <string name="app_name">VoiceNotes</string>
    <string name="init">INIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lang_selector">Language selector</string>
    <string name="restore_records_title">Fetching records</string>
    <string name="working">Working</string>
    <string name="preload">Preload required data&#8230;</string>

    <string name="no_network_error">Please, check your internet connection</string>
    <string name="something_went_wrong">Oops, something went wrong</string>

    <string name="debug_crash_message">Debug crash</string>

    // Feature preload languages
    <string name="preload_error_dialog_skip_preload">Skip</string>
    <string name="preload_error_dialog_retry_preload">Retry</string>

    <string name="fetching_supported_languages_list_error">Error occurred while loading list of supported languages</string>
    <string name="store_file_error_no_directory">Storage directory is not available</string>
    <string name="store_file_error">Error occurred while storing audio file locally</string>
    <string name="fetch_file_error">Error occurred while fetching audio file locally</string>
    <string name="fetch_file_error_crc32">Error occurred while fetching audio file locally: crc32 mismatch</string>
    <string name="type_your_native_language">Type your native language</string>
    <string name="fetch_file_error_no_local_file">Error occurred while fetching audio file locally: no file</string>
    <string name="skip">Skip</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="synchronization_status_enabled">Synchronization enabled</string>
    <string name="synchronization_status_disabled">Synchronization disabled</string>
    <string name="native_language">Native %s</string>
    <string name="native_language_empty">No native language selected</string>
    <string name="native_language_setting">Native language</string>
    <string name="synchronization_status">Synchronization status</string>

    <string name="setting_native_language_explanation">This language is using to decode audio files via Google Cloud Platform.</string>
    <string name="setting_synchronization_status_explanation">This feature allows to store your data in the Google Cloud Storage (audio and decoded text).</string>

    <string name="record_audio_permission_permanently_denied_message">Permission permanently denied</string>
    <string name="record_audio_permission_permanently_denied_negative">Dismiss</string>
    <string name="record_audio_permission_permanently_denied_positive">Settings</string>

    <string name="record_audio_permission_rationale">Application cannot work without Record Audio permission</string>
    <string name="store_file_permission_rationale">Application cannot work without Write External SD card permission</string>
    <string name="record_audio_permission_rationale_negative">Dismiss</string>
    <string name="record_audio_permission_rationale_positive">Got it</string>

    <string name="record_item_synchronized">Synchronized</string>
    <string name="record_item_is_not_synchronized">Not synchronized</string>
    <string name="record_item_is_not_transcribed">No synchronized</string>

    <string name="transcription_is_not_ready">Transcription is not ready</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="share_voice_file_label">Share audio file via…</string>
    <string name="share_transcription_label">Share transcription via…</string>
    <string name="share_note_dialog_message">Select what do you want to share</string>
    <string name="share_audio_file">Record</string>
    <string name="share_transcription">Transcription</string>
    <string name="share_nothing">Cancel</string>

    <string name="empty_message">Empty message</string>
    <string name="share_text_subject">VoiceNotes transcription</string>


    <string name="main_feature_invitation_part_1">Transcription is not available now\n\nPress icon</string>
    <string name="main_feature_invitation_part_2">on selected record control panel</string>
    <string name="share_voice_file_subject">Audio file %s</string>
    <string name="share_voice_file_extra">Record performed with VoiceNotes for Android</string>

    <string name="error_registration_required">Registration required to perform operation</string>
    <string name="error_record_language_required">Language of voice must be defined</string>
    <string name="error_file_must_be_uploaded">Wait till record will be synchronized</string>
    <string name="error_cannot_recognize_deleted_record">Cannot recognize deleted record</string>
    <string name="error_absolutely_no_funds_one_coin_required">Your have no coins.\nOne coin is required</string>
    <string name="error_not_enough_funds">Not enough funds\n %s coins are required, %s coins are available</string>
    <string name="error_absolutely_no_funds">Your have no coins.\n%s coins are required</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="cost_coins">Requires %s coins</string>
    <string name="of">of</string>
    <string name="remaining_coins">remaining %s coins</string>
    <string name="attention_required">Attention required</string>
    <string name="auth">AUTH</string>

    <string name="auth_title">Authorization</string>
    <string name="auth_fail">Authorization failed</string>

    <string name="sorry_cannot_skip">Sorry, you cannot skip it…</string>
    <string name="error_no_records">Error: no record</string>
    <string name="fetching_records_from_cloud_storage">Fetching records from cloud storage…</string>
    <string name="error_fetching_data">Fetching records from cloud storage error</string>
    <string name="restore_records_result_message">%d records fetched from cloud storage</string>
    <string name="restore_records_result_one_message">One record fetched from cloud storage</string>
    <string name="restore_records_result_zero_message">No records fetched from cloud storage</string>

    <string name="error_file_download">Error file download</string>
    <string name="remote_storage_error">File was removed</string>
    <string name="sign_out_application">Sign out application</string>
    <string name="perform_sign_out">Perform sign out</string>
    <string name="all_local_files_will_be_erased">All local files will be erased.\nFiles on remote cloud are in safe</string>

    <string name="sign_out_dialog_message_with_permission">Application will perform Sign out. Cached audio files will be removed</string>
    <string name="sign_out_dialog_message_without_permission">Application will perform Sign out. Cached audio files will not be removed</string>
    <string name="auth_provider_format">Authorization provider: %s</string>
    <string name="account_details">Account details</string>
    <string name="delete_record_message">Delete record %s?</string>

    <string name="error_feature_under_construction_long_duration">This feature is under construction: decoding long duration audio file (60 seconds and longer). Your file is %s long</string>
    <string name="promo_request_sent">Thank you for using our service! Promo request has been sent. You will get extra coins shortly.</string>
    <string name="purchase_coins">Get some coins</string>

</resources>
