<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            style="@style/setting_label"
            android:text="@string/native_language_setting" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            android:id="@+id/setting_native_language"
            style="@style/setting_value"
            tools:text="@string/native_language_empty" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            style="@style/setting_explanation"
            android:text="@string/setting_native_language_explanation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_delimiter" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            style="@style/setting_label"
            android:text="@string/synchronization_status" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            android:id="@+id/setting_synchronization"
            style="@style/setting_value"
            tools:text="@string/synchronization_status_disabled" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <TextView
            style="@style/setting_explanation"
            android:text="@string/setting_synchronization_status_explanation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_delimiter" />

    </LinearLayout>

</ScrollView>